--- a/BaiTapLon.ioc
+++ b/BaiTapLon.ioc
@@ -106,11 +106,10 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
-TIM1.Period=8999
+TIM1.Period=999
 TIM1.Prescaler=1439
-TIM1.Pulse-PWM\ Generation1\ CH1=900
-TIM4.IPParameters=Prescaler,Period
-TIM4.Period=65534
+TIM1.Pulse-PWM\ Generation1\ CH1=100
+TIM4.IPParameters=Prescaler
 TIM4.Prescaler=71
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
